Prepared 30K, 50K, 90K exp for unfair LR

--- a/notebooks/out_of_domain_uncertainty_poor_income_LR_30K/Income_2018.ipynb
+++ b/notebooks/out_of_domain_uncertainty_poor_income_LR_30K/Income_2018.ipynb
@@ -207,7 +207,7 @@
     "EXPERIMENT_NAME = 'out_of_domain_uncertainty_poor_income_LR_30K'\n",
     "DB_COLLECTION_NAME = 'out_of_domain_uncertainty'\n",
     "SAVE_RESULTS_DIR_PATH = os.path.join(ROOT_DIR, 'results', EXPERIMENT_NAME)\n",
-    "FAIR_INTERVENTION_PARAMS_LST = [0.7]\n",
+    "FAIR_INTERVENTION_PARAMS_LST = [0.0]\n",
     "TRAIN_SET_SUBSAMPLE_SIZE = 30_000\n",
     "\n",
     "config_yaml_path = os.path.join(ROOT_DIR, 'notebooks', EXPERIMENT_NAME, 'poor_income_2018_config.yaml')\n",
@@ -723,9 +723,7 @@
       " 'experiment_iteration': 'Exp_iter_1',\n",
       " 'fair_intervention_params_lst': '[0.7]',\n",
       " 'model_init_seed': 100,\n",
-      " 'session_uuid': '223090a3-0104-489f-8050-92a22bfbd1f6'}\n",
-      "\n",
-      "\n"
+      " 'session_uuid': '223090a3-0104-489f-8050-92a22bfbd1f6'}\n"
      ]
     },
     {
@@ -1253,8 +1251,7 @@
      "output_type": "stream",
      "text": [
       "2023/11/13, 16:43:21: Tuning LogisticRegression...\n",
-      "2023/11/13, 16:44:10: Tuning for LogisticRegression is finished [F1 score = 0.7503141745695053, Accuracy = 0.7999]\n",
-      "\n"
+      "2023/11/13, 16:44:10: Tuning for LogisticRegression is finished [F1 score = 0.7503141745695053, Accuracy = 0.7999]\n"
      ]
     },
     {
@@ -1331,7 +1328,6 @@
     "exp_iter_num = 2\n",
     "experiment_seed = EXPERIMENT_SEEDS[exp_iter_num - 1]\n",
     "tuned_params_filenames = [\n",
-    "    'tuning_results_Folktables_2018_Income_alpha_0.7_exp_iter_1_20231113__214410.csv'\n",
     "]\n",
     "tuned_params_df_paths = [os.path.join(ROOT_DIR, 'results', EXPERIMENT_NAME, tuned_params_filename)\n",
     "                         for tuned_params_filename in tuned_params_filenames]\n",
@@ -1364,9 +1360,7 @@
       " 'experiment_iteration': 'Exp_iter_2',\n",
       " 'fair_intervention_params_lst': '[0.7]',\n",
       " 'model_init_seed': 200,\n",
-      " 'session_uuid': '223090a3-0104-489f-8050-92a22bfbd1f6'}\n",
-      "\n",
-      "\n"
+      " 'session_uuid': '223090a3-0104-489f-8050-92a22bfbd1f6'}\n"
      ]
     },
     {
@@ -1971,7 +1965,6 @@
     "exp_iter_num = 3\n",
     "experiment_seed = EXPERIMENT_SEEDS[exp_iter_num - 1]\n",
     "tuned_params_filenames = [\n",
-    "    'tuning_results_Folktables_2018_Income_alpha_0.7_exp_iter_1_20231113__214410.csv'\n",
     "]\n",
     "tuned_params_df_paths = [os.path.join(ROOT_DIR, 'results', EXPERIMENT_NAME, tuned_params_filename)\n",
     "                         for tuned_params_filename in tuned_params_filenames]\n",
@@ -2025,7 +2018,6 @@
     "exp_iter_num = 4\n",
     "experiment_seed = EXPERIMENT_SEEDS[exp_iter_num - 1]\n",
     "tuned_params_filenames = [\n",
-    "    'tuning_results_Folktables_2018_Income_alpha_0.7_exp_iter_1_20231113__214410.csv'\n",
     "]\n",
     "tuned_params_df_paths = [os.path.join(ROOT_DIR, 'results', EXPERIMENT_NAME, tuned_params_filename)\n",
     "                         for tuned_params_filename in tuned_params_filenames]\n",
@@ -2079,7 +2071,6 @@
     "exp_iter_num = 5\n",
     "experiment_seed = EXPERIMENT_SEEDS[exp_iter_num - 1]\n",
     "tuned_params_filenames = [\n",
-    "    'tuning_results_Folktables_2018_Income_alpha_0.7_exp_iter_1_20231113__214410.csv'\n",
     "]\n",
     "tuned_params_df_paths = [os.path.join(ROOT_DIR, 'results', EXPERIMENT_NAME, tuned_params_filename)\n",
     "                         for tuned_params_filename in tuned_params_filenames]\n",
@@ -2133,7 +2124,6 @@
     "exp_iter_num = 6\n",
     "experiment_seed = EXPERIMENT_SEEDS[exp_iter_num - 1]\n",
     "tuned_params_filenames = [\n",
-    "    'tuning_results_Folktables_2018_Income_alpha_0.7_exp_iter_1_20231113__214410.csv'\n",
     "]\n",
     "tuned_params_df_paths = [os.path.join(ROOT_DIR, 'results', EXPERIMENT_NAME, tuned_params_filename)\n",
     "                         for tuned_params_filename in tuned_params_filenames]\n",
