--- a/notebooks/out_of_domain_uncertainty_rich_income_LR_30K/Income_2018.ipynb
+++ b/notebooks/out_of_domain_uncertainty_rich_income_LR_30K/Income_2018.ipynb
@@ -211,7 +211,7 @@
     "EXPERIMENT_NAME = 'out_of_domain_uncertainty_rich_income_LR_30K'\n",
     "DB_COLLECTION_NAME = 'out_of_domain_uncertainty'\n",
     "SAVE_RESULTS_DIR_PATH = os.path.join(ROOT_DIR, 'results', EXPERIMENT_NAME)\n",
-    "FAIR_INTERVENTION_PARAMS_LST = [0.7]\n",
+    "FAIR_INTERVENTION_PARAMS_LST = [0.0]\n",
     "TRAIN_SET_SUBSAMPLE_SIZE = 30_000\n",
     "\n",
     "config_yaml_path = os.path.join(ROOT_DIR, 'notebooks', EXPERIMENT_NAME, 'rich_income_2018_config.yaml')\n",
@@ -727,9 +727,7 @@
       " 'experiment_iteration': 'Exp_iter_1',\n",
       " 'fair_intervention_params_lst': '[0.7]',\n",
       " 'model_init_seed': 100,\n",
-      " 'session_uuid': '42b1bd0f-6dbe-479d-906f-902f13ce7049'}\n",
-      "\n",
-      "\n"
+      " 'session_uuid': '42b1bd0f-6dbe-479d-906f-902f13ce7049'}\n"
      ]
     },
     {
@@ -1263,8 +1261,7 @@
      "output_type": "stream",
      "text": [
       "2023/11/13, 16:39:41: Tuning LogisticRegression...\n",
-      "2023/11/13, 16:41:20: Tuning for LogisticRegression is finished [F1 score = 0.8089958073664775, Accuracy = 0.8091333333333334]\n",
-      "\n"
+      "2023/11/13, 16:41:20: Tuning for LogisticRegression is finished [F1 score = 0.8089958073664775, Accuracy = 0.8091333333333334]\n"
      ]
     },
     {
