--- a/notebooks/out_of_domain_uncertainty_rich_income_LR_50K/Income_2018.ipynb
+++ b/notebooks/out_of_domain_uncertainty_rich_income_LR_50K/Income_2018.ipynb
@@ -211,7 +211,7 @@
     "EXPERIMENT_NAME = 'out_of_domain_uncertainty_rich_income_LR_50K'\n",
     "DB_COLLECTION_NAME = 'out_of_domain_uncertainty'\n",
     "SAVE_RESULTS_DIR_PATH = os.path.join(ROOT_DIR, 'results', EXPERIMENT_NAME)\n",
-    "FAIR_INTERVENTION_PARAMS_LST = [0.7]\n",
+    "FAIR_INTERVENTION_PARAMS_LST = [0.0]\n",
     "TRAIN_SET_SUBSAMPLE_SIZE = 50_000\n",
     "\n",
     "config_yaml_path = os.path.join(ROOT_DIR, 'notebooks', EXPERIMENT_NAME, 'rich_income_2018_config.yaml')\n",
@@ -727,9 +727,7 @@
       " 'experiment_iteration': 'Exp_iter_1',\n",
       " 'fair_intervention_params_lst': '[0.7]',\n",
       " 'model_init_seed': 100,\n",
-      " 'session_uuid': 'c4fbebec-73df-440a-8cb1-6887b4329a73'}\n",
-      "\n",
-      "\n"
+      " 'session_uuid': 'c4fbebec-73df-440a-8cb1-6887b4329a73'}\n"
      ]
     },
     {
@@ -1263,8 +1261,7 @@
      "output_type": "stream",
      "text": [
       "2023/11/16, 15:49:39: Tuning LogisticRegression...\n",
-      "2023/11/16, 15:51:03: Tuning for LogisticRegression is finished [F1 score = 0.8127773797865441, Accuracy = 0.812839989450061]\n",
-      "\n"
+      "2023/11/16, 15:51:03: Tuning for LogisticRegression is finished [F1 score = 0.8127773797865441, Accuracy = 0.812839989450061]\n"
      ]
     },
     {
