--- a/notebooks/out_of_domain_uncertainty_rich_income_LR_90K/Income_2018.ipynb
+++ b/notebooks/out_of_domain_uncertainty_rich_income_LR_90K/Income_2018.ipynb
@@ -211,7 +211,7 @@
     "EXPERIMENT_NAME = 'out_of_domain_uncertainty_rich_income_LR_90K'\n",
     "DB_COLLECTION_NAME = 'out_of_domain_uncertainty'\n",
     "SAVE_RESULTS_DIR_PATH = os.path.join(ROOT_DIR, 'results', EXPERIMENT_NAME)\n",
-    "FAIR_INTERVENTION_PARAMS_LST = [0.7]\n",
+    "FAIR_INTERVENTION_PARAMS_LST = [0.0]\n",
     "TRAIN_SET_SUBSAMPLE_SIZE = 90_000\n",
     "\n",
     "config_yaml_path = os.path.join(ROOT_DIR, 'notebooks', EXPERIMENT_NAME, 'rich_income_2018_config.yaml')\n",
@@ -727,9 +727,7 @@
       " 'experiment_iteration': 'Exp_iter_1',\n",
       " 'fair_intervention_params_lst': '[0.7]',\n",
       " 'model_init_seed': 100,\n",
-      " 'session_uuid': '6349084e-1fca-4441-9901-bd4c4d360e14'}\n",
-      "\n",
-      "\n"
+      " 'session_uuid': '6349084e-1fca-4441-9901-bd4c4d360e14'}\n"
      ]
     },
     {
@@ -1263,8 +1261,7 @@
      "output_type": "stream",
      "text": [
       "2023/11/23, 04:49:38: Tuning LogisticRegression...\n",
-      "2023/11/23, 04:53:30: Tuning for LogisticRegression is finished [F1 score = 0.8134174045770247, Accuracy = 0.8134888888888888]\n",
-      "\n"
+      "2023/11/23, 04:53:30: Tuning for LogisticRegression is finished [F1 score = 0.8134174045770247, Accuracy = 0.8134888888888888]\n"
      ]
     },
     {
