--- a/notebooks/out_of_domain_uncertainty_poor_income_LR_50K/Income_2018.ipynb
+++ b/notebooks/out_of_domain_uncertainty_poor_income_LR_50K/Income_2018.ipynb
@@ -211,7 +211,7 @@
     "EXPERIMENT_NAME = 'out_of_domain_uncertainty_poor_income_LR_50K'\n",
     "DB_COLLECTION_NAME = 'out_of_domain_uncertainty'\n",
     "SAVE_RESULTS_DIR_PATH = os.path.join(ROOT_DIR, 'results', EXPERIMENT_NAME)\n",
-    "FAIR_INTERVENTION_PARAMS_LST = [0.7]\n",
+    "FAIR_INTERVENTION_PARAMS_LST = [0.0]\n",
     "TRAIN_SET_SUBSAMPLE_SIZE = 50_000\n",
     "\n",
     "config_yaml_path = os.path.join(ROOT_DIR, 'notebooks', EXPERIMENT_NAME, 'poor_income_2018_config.yaml')\n",
@@ -727,9 +727,7 @@
       " 'experiment_iteration': 'Exp_iter_1',\n",
       " 'fair_intervention_params_lst': '[0.7]',\n",
       " 'model_init_seed': 100,\n",
-      " 'session_uuid': 'b8ad0a86-280d-46fb-8746-d55be289381c'}\n",
-      "\n",
-      "\n"
+      " 'session_uuid': 'b8ad0a86-280d-46fb-8746-d55be289381c'}\n"
      ]
     },
     {
@@ -1263,8 +1261,7 @@
      "output_type": "stream",
      "text": [
       "2023/11/16, 15:52:53: Tuning LogisticRegression...\n",
-      "2023/11/16, 15:54:23: Tuning for LogisticRegression is finished [F1 score = 0.7556295614893799, Accuracy = 0.803400073844197]\n",
-      "\n"
+      "2023/11/16, 15:54:23: Tuning for LogisticRegression is finished [F1 score = 0.7556295614893799, Accuracy = 0.803400073844197]\n"
      ]
     },
     {
@@ -1341,7 +1338,6 @@
     "exp_iter_num = 2\n",
     "experiment_seed = EXPERIMENT_SEEDS[exp_iter_num - 1]\n",
     "tuned_params_filenames = [\n",
-    "    'tuning_results_Folktables_2018_Income_alpha_0.7_exp_iter_1_20231113__214410.csv'\n",
     "]\n",
     "tuned_params_df_paths = [os.path.join(ROOT_DIR, 'results', EXPERIMENT_NAME, tuned_params_filename)\n",
     "                         for tuned_params_filename in tuned_params_filenames]\n",
@@ -1979,7 +1975,6 @@
     "exp_iter_num = 3\n",
     "experiment_seed = EXPERIMENT_SEEDS[exp_iter_num - 1]\n",
     "tuned_params_filenames = [\n",
-    "    'tuning_results_Folktables_2018_Income_alpha_0.7_exp_iter_1_20231113__214410.csv'\n",
     "]\n",
     "tuned_params_df_paths = [os.path.join(ROOT_DIR, 'results', EXPERIMENT_NAME, tuned_params_filename)\n",
     "                         for tuned_params_filename in tuned_params_filenames]\n",
@@ -2033,7 +2028,6 @@
     "exp_iter_num = 4\n",
     "experiment_seed = EXPERIMENT_SEEDS[exp_iter_num - 1]\n",
     "tuned_params_filenames = [\n",
-    "    'tuning_results_Folktables_2018_Income_alpha_0.7_exp_iter_1_20231113__214410.csv'\n",
     "]\n",
     "tuned_params_df_paths = [os.path.join(ROOT_DIR, 'results', EXPERIMENT_NAME, tuned_params_filename)\n",
     "                         for tuned_params_filename in tuned_params_filenames]\n",
@@ -2087,7 +2081,6 @@
     "exp_iter_num = 5\n",
     "experiment_seed = EXPERIMENT_SEEDS[exp_iter_num - 1]\n",
     "tuned_params_filenames = [\n",
-    "    'tuning_results_Folktables_2018_Income_alpha_0.7_exp_iter_1_20231113__214410.csv'\n",
     "]\n",
     "tuned_params_df_paths = [os.path.join(ROOT_DIR, 'results', EXPERIMENT_NAME, tuned_params_filename)\n",
     "                         for tuned_params_filename in tuned_params_filenames]\n",
@@ -2141,7 +2134,6 @@
     "exp_iter_num = 6\n",
     "experiment_seed = EXPERIMENT_SEEDS[exp_iter_num - 1]\n",
     "tuned_params_filenames = [\n",
-    "    'tuning_results_Folktables_2018_Income_alpha_0.7_exp_iter_1_20231113__214410.csv'\n",
     "]\n",
     "tuned_params_df_paths = [os.path.join(ROOT_DIR, 'results', EXPERIMENT_NAME, tuned_params_filename)\n",
     "                         for tuned_params_filename in tuned_params_filenames]\n",
